objects/vlocity_ins__CalculationMatrixDimension__c.object
<CustomObject>
    <description>Defines the input and output dimensions of a matrix.</description>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixId__c</fullName>
        <label>Pricing Matrix</label>
        <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Matrix Dimensions</relationshipLabel>
        <relationshipName>VlocityCalculationMatrixDimensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColumnKey__c</fullName>
        <label>Column Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColumnType__c</fullName>
        <label>Column Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number Range</fullName>
                </value>
                <value>
                    <fullName>Text Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RangeValues__c</fullName>
        <label>Range Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Calculation Matrix Dimension</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Dimensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>